paddings in header

--- a/index.html
+++ b/index.html
@@ -424,13 +424,13 @@
             <div className="min-h-screen" style={{ background: '#1B1C25' }}>
               <div className="max-w-2xl mx-auto">
                 {/* Заголовок */}
-                <div className="flex items-center justify-between mb-4">
+                <div className="flex items-center justify-between mb-2 p-2">
                   <div className="flex items-center gap-2">
                     <h1 className="text-2xl font-semibold text-white mb-0 flex items-center gap-2">🏎️ F1 Fan Trainer</h1>
                   </div>
                   <button
                     onClick={resetQuiz}
-                    className="flex items-center gap-1 border border-gray-400 text-gray-200 hover:border-blue-400 hover:text-blue-400 rounded-lg px-3 py-1.5 bg-transparent transition-colors ml-4"
+                    className="flex items-center gap-1 border border-gray-400 text-gray-200 hover:border-blue-400 hover:text-blue-400 rounded-lg px-3 py-1.5 bg-transparent transition-colors"
                     title="Reset quiz"
                   >
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={2} stroke="currentColor" className="w-5 h-5">
