--- a/index.html
+++ b/index.html
@@ -509,13 +509,13 @@
                       <div className="relative">
                         {imageLoading && (
                           <div className="absolute inset-0 flex items-center justify-center bg-gray-100 rounded-lg z-10">
-                            <div className="text-gray-500">Загрузка изображения...</div>
+                            <div className="text-gray-500">Loading image...</div>
                           </div>
                         )}
                         {imageError ? (
                           <div className="w-full h-48 bg-gray-200 rounded-lg flex items-center justify-center">
                             <div className="text-center">
-                              <p className="text-gray-500 mb-2">Изображение недоступно</p>
+                              <p className="text-gray-500 mb-2">Image not available</p>
                               <button 
                                 onClick={() => {
                                   setImageError(false);
@@ -523,7 +523,7 @@
                                 }}
                                 className="mt-2 px-3 py-1 bg-blue-500 text-white text-sm rounded hover:bg-blue-600"
                               >
-                                Попробовать снова
+                                Try again
                               </button>
                             </div>
                           </div>
