removed shadows from drives banners

--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                   <img
                     src={img}
                     alt={driverName}
-                    className="object-cover object-top shadow-lg"
+                    className="object-cover object-top"
                     style={{ height: '120px', width: '120px' }}
                   />
                 )}
