footer with links

--- a/index.html
+++ b/index.html
@@ -660,6 +660,14 @@
                     <p className="mt-1">
                       🏁 {f1Data.tracks.length} tracks • 👨‍💼 {f1Data.drivers.length} drivers • 🔢 Numbers • 🔄 Laps
                     </p>
+                    <a
+                      href="https://github.com/wblabs/f1trainer"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      className="block mt-3 text-xs text-gray-500 hover:text-blue-400 transition-colors underline"
+                    >
+                      github.com/wblabs/f1trainer
+                    </a>
                   </div>
                 </div>
               </div>
