fixed Max photo

--- a/index.html
+++ b/index.html
@@ -403,6 +403,7 @@
             'Carlos Sainz Jr.': 'https://wblabs.com/f1/drivers/2025/Carlos-Sainz-Jr.avif',
             'Lance Stroll': 'https://wblabs.com/f1/drivers/2025/Lance-Stroll.avif',
             'Yuki Tsunoda': 'https://wblabs.com/f1/drivers/2025/Yuki-Tsunoda.avif',
+            'Max Verstappen': 'https://wblabs.com/f1/drivers/2025/Max-Verstappen.avif',
           };
 
           function DriverAvatar({ name }) {
