Drivers numbers data fixes

--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
               { name: 'Pierre Gasly', number: 10, team: '🔵 Alpine', nationality: '🇫🇷 France' },
               { name: 'Franco Colapinto', number: 43, team: '🔵 Alpine', nationality: '🇦🇷 Argentina' },
               { name: 'Liam Lawson', number: 30, team: '🐂 Racing Bulls', nationality: '🇳🇿 New Zealand' },
-              { name: 'Isack Hadjar', number: 61, team: '🐂 Racing Bulls', nationality: '🇫🇷 France' },
+              { name: 'Isack Hadjar', number: 6, team: '🐂 Racing Bulls', nationality: '🇫🇷 France' },
               { name: 'Esteban Ocon', number: 31, team: '🏎 Haas', nationality: '🇫🇷 France' },
-              { name: 'Oliver Bearman', number: 50, team: '🔴 Haas', nationality: '🇬🇧 UK' },
+              { name: 'Oliver Bearman', number: 87, team: '🔴 Haas', nationality: '🇬🇧 UK' },
               { name: 'Alexander Albon', number: 23, team: '💙 Williams', nationality: '🇹🇭 Thailand' },
               { name: 'Carlos Sainz Jr.', number: 55, team: '💙 Williams', nationality: '🇪🇸 Spain' },
               { name: 'Nico Hulkenberg', number: 27, team: '🟢 Kick Sauber', nationality: '🇩🇪 Germany' },
@@ -583,7 +583,7 @@
                             <img
                               src={`https://wblabs.com/f1/numbers/2025/${option}.avif`}
                               alt={`Номер ${option}`}
-                              className="w-3/4 h-3/4 object-contain"
+                              className="h-16 w-auto max-w-full object-contain"
                               loading="lazy"
                             />
                           </button>
