Preload of all images

--- a/index.html
+++ b/index.html
@@ -313,6 +313,12 @@
               const img = new window.Image();
               img.src = src;
             });
+            // Preload all number images
+            const numberList = [1,10,12,14,16,18,22,23,27,30,31,4,43,44,5,55,6,63,81,87];
+            numberList.forEach(num => {
+              const img = new window.Image();
+              img.src = `https://wblabs.com/f1/numbers/2025/${num}.avif`;
+            });
           }, []);
           useEffect(() => {
             if (shuffledQuestionTypes.length > 0) {
